ball so came from iTunes

--- a/Chippai/en.lproj/MainMenu.xib
+++ b/Chippai/en.lproj/MainMenu.xib
@@ -47,5 +47,13 @@
             </connections>
         </customObject>
         <customObject id="420" customClass="NSFontManager"/>
+        <button verticalHuggingPriority="750" id="89E-UD-H1H">
+            <rect key="frame" x="0.0" y="0.0" width="82" height="32"/>
+            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+            <buttonCell key="cell" type="push" title="Button" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="eY9-gw-Hhq">
+                <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                <font key="font" metaFont="system"/>
+            </buttonCell>
+        </button>
     </objects>
 </document>
